# social-automation

./: .env.example  .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TERMS.md  cloudflare-dns-import.txt  post.md  pyproject.toml  requirements.txt  tiktokcCafdHRZys48c72mL0KAGEkyvAIkZXOP.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  website-ci.yml  website-daily-tests.yml
config/: default.yaml  themes.yaml  verses.yaml
data/: social.db
pages/: 2_Content_Pipeline.py  3_Publish_Queue.py  4_Configuration.py  5_CI_Status.py
scripts/: generate_test_overlays.py
src/: config.py  dashboard.py  db.py  main.py
src/content/: prayers.py  themes.py  verses.py
src/media/: compositor.py  footage.py  text_overlay.py  tts.py
src/publishing/: scheduler.py  tiktok.py
tests/: test_compositor.py  test_config.py  test_db.py  test_footage.py  test_integration.py  test_main.py  test_prayers.py  test_scheduler.py  test_text_overlay.py  test_themes.py  test_tiktok.py  test_tts.py  test_verses.py
website/: .env.example  ARCHITECTURE.md  TESTING.md  dns-records.txt  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
website/app/: globals.css  layout.tsx  page.tsx
website/components/: AdminNav.tsx  AudioPlayer.tsx  CopyPrayerButton.tsx  EngagementChart.tsx  ShareButtons.tsx
website/lib/: auth.ts  db-data.ts  db.ts  session.ts
website/public/: PRIVACY.md  TERMS.md  _routes.json  tiktokbkuUq15uHR3q2lvhagfgcqMJOrRpyZqP.txt  tiktokcCafdHRZys48c72mL0KAGEkyvAIkZXOP.txt
(+49 files in other folders)
